third_party/move/move-compiler-v2/tests/ability-check/v1-borrow-tests/assign_resource.exp

Diagnostics:
error: local `t` of type `M::T` does not have the `drop` ability
  ┌─ tests/ability-check/v1-borrow-tests/assign_resource.move:5:22
  │
5 │         let t = T{}; &t;
  │                      ^^ implicitly dropped here since it is no longer used

error: local `t` of type `M::T` does not have the `drop` ability
  ┌─ tests/ability-check/v1-borrow-tests/assign_resource.move:6:19
  │
6 │         t = T {}; &t;
  │                   ^^ implicitly dropped here since it is no longer used
